# NETLizard_idTech4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  converter.cpp  converter.h  converter_map.cpp  converter_material.cpp  converter_texture.cpp  main.cpp  map.cpp  map.h  material.cpp  material.h  matrix.h  plane.h  str.cpp  str.h  vector.h
libnetlizard/: CMakeLists.txt  clone3d.c  constants.c  ct3d.c  ct3dep2.c  ct3dep3.c  def.h  egypt3d.c  error.c  error.h  font.c  io.c  io.h  jport.c  jport.h  libnetlizard.pro  log.c  log.h  mathalgo.c  mathalgo.h  media_util.c  netlizard.h  netlizard_3d.c  netlizard_3d.h  png.c  png_file.c  priv_local.h  re3d.c  source_string.c  specnaz3d.c  sprite.c  state.c  state.h  text.c  texture.c  texture_file.c  texture_v2.c  texture_v2_file.c  texture_v3.c  texture_v3_file.c  (+2 more)
libnetlizard/soil/: image.c  image.h  image_dxt.h  stb_image_aug.c  stbi_dds_aug.h
resource/ct3d/: lvl5.map
src/: converter.cpp  converter.h  converter_command.cpp  converter_map.cpp  converter_mapdef.cpp  converter_material.cpp  converter_sound.cpp  converter_texture.cpp
src/id/: brush.cpp  brush.h  def.cpp  def.h  entity.cpp  entity.h  map.cpp  map.h  mapfile.cpp  mapfile.h  material.cpp  material.h  precompiled.h  snd.cpp  snd.h
src/io/: filesystem.cpp  filesystem.h
src/lib/: buffer.cpp  buffer.h  dict.cpp  dict.h  drawvert.cpp  drawvert.h  list.h  str.cpp  str.h
src/math/: bounds.cpp  bounds.h  maths.cpp  maths.h  matrix.cpp  matrix.h  plane.cpp  plane.h  vector.cpp  vector.h
